--- a/style.css
+++ b/style.css
@@ -1,16 +1,61 @@
+/* Reset CSS */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    font-size: 16px;
+    line-height: 1.5;
+    font-family: sans-serif;
+}
+
+ul, ol {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.modal {
+    background-color: white;
+    position: fixed;
+    width: 700px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 body {
     background-color: green;
     font-family: "Winky Sans";
 }
 
-@keyframes spin {
+/* @keyframes spin {
         from {
             transform: rotate(0deg);
         }
         to {
             transform: rotate(360deg);
         }
-    }
+    } */
 
 img {
     max-width: 500px;
@@ -45,3 +90,44 @@ img:hover {
     font-size: 50px;
 }
 
+.backdrop {
+    background-color: rgba(128, 128, 128, 0.5);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal {
+    background-color: white;
+    position: fixed;
+    width: 700px;
+    height: 500px;
+    display: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.modal__button {
+    width: 30px;
+    height: 30px;
+    margin-left: auto;
+    border: none;
+    background-color: gray;
+    cursor: pointer;
+    top: auto;
+}
+
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+}
